<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GymCard">

    <EditText
        android:id="@+id/gymNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="239dp" />

    <EditText
        android:id="@+id/gymAddressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="338dp" />

    <EditText
        android:id="@+id/gymPriceField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="449dp" />

    <EditText
        android:id="@+id/gymTypeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="553dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymName"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="213dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymAddress"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymPrice"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="422dp" />

    <TextView
        android:id="@+id/gymPriceField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymType"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="530dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="643dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="643dp" />
</androidx.constraintlayout.widget.ConstraintLayout>